// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calendar router addEventAttendee can add attendee 1`] = `
Object {
  "email": "tester@test.co",
  "id": undefined,
  "name": "tester",
}
`;

exports[`calendar router createCalendarEvent can create event 1`] = `
Object {
  "description": "Test 1 2 3",
  "end": null,
  "id": undefined,
  "isAllDay": false,
  "isPublic": false,
  "name": "test",
  "start": "2020-03-05T13:30:45.000-07:00",
}
`;

exports[`calendar router deleteCalendarEvent can delete event 1`] = `
Object {
  "deleted": true,
}
`;

exports[`calendar router deleteEventAttendee can delete attendee 1`] = `
Object {
  "deleted": true,
}
`;

exports[`calendar router exportCalendarEvents can export events 1`] = `
Object {
  "description": "Testing 1 2 3",
  "events": Array [],
  "name": "Test",
  "prodId": "//Government of Alberta//urn:ads:platform:calendar-service//EN",
  "url": "https://calendar-service/undefined",
}
`;

exports[`calendar router getCalendarEvents can get events 1`] = `
Object {
  "page": Object {},
  "results": Array [],
}
`;

exports[`calendar router getCalendars can get calendars 1`] = `
Array [
  Object {
    "description": "Testing 1 2 3",
    "displayName": "Test",
    "name": "test",
    "readRoles": Array [
      "test-reader",
    ],
    "updateRoles": Array [
      "test-updater",
    ],
  },
]
`;

exports[`calendar router getEventAttendee can delete attendee 1`] = `
Object {
  "email": "tester@test.co",
  "id": 23,
  "name": "tester",
}
`;

exports[`calendar router getEventAttendees can get attendees 1`] = `Array []`;

exports[`calendar router retrieveCalendarEvent can retrieve event 1`] = `
Object {
  "description": "Test 1 2 3",
  "end": "2021-03-03T15:30:00.000-07:00",
  "id": 12,
  "isAllDay": false,
  "isPublic": false,
  "name": "test",
  "start": "2021-03-03T13:30:00.000-07:00",
}
`;

exports[`calendar router setEventAttendee can set attendee 1`] = `
Object {
  "email": "tester@test.co",
  "id": 23,
  "name": "tester 2",
}
`;

exports[`calendar router updateCalendarEvent can update event 1`] = `
Object {
  "description": "Test 1 2 3",
  "end": "2021-03-03T15:30:00.000-07:00",
  "id": 12,
  "isAllDay": false,
  "isPublic": false,
  "name": "test 2",
  "start": "2020-03-05T11:00:00.000-07:00",
}
`;
